Revert "use immutable collections for static and member variables when possible"
This reverts commit cc548a6194e76576547b5904b6ac111b5c2856b3.