@@ -69,7 +69,11 @@ public final class ReactiveOidcIdTokenDecoderFactory implements ReactiveJwtDecod
 
 	private static final Map<JwsAlgorithm, String> JCA_ALGORITHM_MAPPINGS;
 	static {
-		JCA_ALGORITHM_MAPPINGS = Map.of(MacAlgorithm.HS256, "HmacSHA256", MacAlgorithm.HS384, "HmacSHA384", MacAlgorithm.HS512, "HmacSHA512");
+		Map<JwsAlgorithm, String> mappings = new HashMap<JwsAlgorithm, String>();
+		mappings.put(MacAlgorithm.HS256, "HmacSHA256");
+		mappings.put(MacAlgorithm.HS384, "HmacSHA384");
+		mappings.put(MacAlgorithm.HS512, "HmacSHA512");
+		JCA_ALGORITHM_MAPPINGS = Collections.unmodifiableMap(mappings);
 	}
 
 	private static final ClaimTypeConverter DEFAULT_CLAIM_TYPE_CONVERTER = new ClaimTypeConverter(
